--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,13 @@ a.logo img{
 header .intro-text{
   text-shadow: 0px 0px 2px rgba(0,0,0,.75);
 }
+
+.link_google_negocios{
+    /*font-weight: bold;*/
+    color: white;
+}
+
+.link_google_negocios:hover{
+    /*font-weight: bold;*/
+    color: white;
+}
